注册和登录

--- a/src/index.html
+++ b/src/index.html
@@ -499,6 +499,31 @@
                         <h3>香港特快直送</h3>
                         <p>包税零扣关 ￥288元</p>
                     </div>
+                    <div class="sasa_promiselist">
+                        <i class="sasatb2"></i>
+                        <h3>香港特快直送</h3>
+                        <p>包税零扣关 ￥288元</p>
+                    </div>
+                    <div class="sasa_promiselist">
+                        <i class="sasatb3"></i>
+                        <h3>香港特快直送</h3>
+                        <p>包税零扣关 ￥288元</p>
+                    </div>
+                    <div class="sasa_promiselist">
+                        <i class="sasatb4"></i>
+                        <h3>香港特快直送</h3>
+                        <p>包税零扣关 ￥288元</p>
+                    </div>
+                    <div class="sasa_promiselist">
+                        <i class="sasatb5"></i>
+                        <h3>香港特快直送</h3>
+                        <p>包税零扣关 ￥288元</p>
+                    </div>
+                </div>
+                <!-- 每日必看 -->
+                <div class="edayk clearfix">
+                    <div class="everyday "></div>
+                    
                 </div>
             </div>
         </div>
