商品列表页1.1.0

--- a/src/html/Login.html
+++ b/src/html/Login.html
@@ -113,7 +113,7 @@
                                 </div>
                             </div>
                             <div class="zcnr_l fr">
-                                <img src="../img/dlandzc/zc.jpg" alt="">
+                                <img src="../img/dlandzc/dl.png" alt="">
                             </div>
                         </div>
                     </div>
