--- a/src/html/commenhead.html
+++ b/src/html/commenhead.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>myitme</title>
+    <title></title>
     <link rel="stylesheet" href="../css/comhead.css">
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/index.css">
     <!-- <link rel="stylesheet" href="../css/page.css"> -->
-    <!-- <link rel="stylesheet" href="../css/banner.css"> -->
-    <script src="../lib/jquery-3.2.1.js"></script>
-    <script src="../js/index.js"></script>
-    <script src="../js/common.js"></script>
+    <link rel="stylesheet" href="icon/hzp/iconfont.css">
+    <link rel="stylesheet" href="css/banner.css">
+    <script src="lib/jquery-3.2.1.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/common.js"></script>
     <!-- <script src="../js/banner.js"></script> -->
 </head>
 <body>
-        <!-- head头部 -->
-    <div class="indexbox">
+     <!-- head头部 -->
+   
         <div class="head_top">
                 <div class="container">
                     <ul class="head_tl fl" >
@@ -478,7 +479,7 @@
                         </ul>    
                     </div>
                 </div>
-            </div>
+        </div>
                    
 </body>
 </html>
