--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
                         <i></i>
                             </a>
                             <dl class="myzh">
-                                <dd><a href="#">我的订单</a></dd>
+                                <dd><a href="html/details.html">我的订单</a></dd>
                                 <dd><a href="#">我的积分</a></dd>
                                 <dd><a href="#">我的优惠券</a></dd>
                                 <dd><a href="#">我的收藏</a></dd>
